nic/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
  name: docker-registry
spec:
  tls:
  - hosts:
    - ingress.ingress-space.svc.cluster.local
    secretName: certs-secret
  rules:
  - host: ingress.ingress-space.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
        path: /
