nic/ingress-without-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: docker-registry
spec:
  rules:
  - host: ingress.ingress-space.svc.cluster.local 
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
        path: /
